merampungkan praktik 1 (dto & controller), praktik 2 (penanganan galat terpusat), dan praktik 3 (openapi)